--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+[Ee]ditor/
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
@@ -46,6 +47,7 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
+*.tgz
 
 # Unity3D generated meta files
 *.pidb.meta
